[project]
name = "diffusiontoytests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.18.0",
]
